<resources>
    <string name="channel_yeepay">充值卡</string>
    <string name="channel_alipay">支付宝</string>
    <string name="channel_quickpay">一键支付</string>
    <string name="channel_tencentmm">微信支付</string>
    <string name="dk_payment_hint_yuan" formatted="false">\"%s\"元</string>
    <string name="dk_payment_dialog_title">百度游戏</string>
    <string name="dk_payment_dialog_title_notice">百度游戏公告</string>
    <string name="dk_payment_sms_cm">移动手机话费</string>
    <string name="dk_payment_sms_cu">联通手机话费</string>
    <string name="dk_payment_sms_ct">电信手机话费</string>
    <string name="dk_payment_channel_confirm">确认购买</string>
    <string name="dk_payemnt_dialog_cc">客服：10101866</string>
    <string name="dk_payemnt_dialog_telephone">10101866 </string>
    <string name="dk_payment_channel_rechargecard_cmobile">移动</string>
    <string name="dk_payment_channel_rechargecard_cunicom">联通</string>
    <string name="dk_payment_channel_rechargecard_ctelcom">电信</string>
    <string name="dk_payment_channel_recharege">充值</string>
    <string name="dk_payment_error_2003">本地无可用网络，请检测网络连接！</string>
    <string name="dk_payment_the_amount">本次消费金额</string>
	<string name="dk_payment_yeepay_num_pwd_error">卡号或密码错误,请重试！</string>
	<string name="dk_payment_yeepay_timeout">网络连接超时，请重试！</string>
	<string name="dk_payment_yeepay_net_error">网络连接错误，请重试！</string>
	<string name="dk_payment_sms_failed">短信购买失败，请重试！</string>
	<string name="dk_payment_order_failed">购买失败</string>
	<string name="dk_payment_order_failed_choice_other">购买失败,请选择其他支付方式</string>
	<string name="dk_payment_order_failed_choice_weixin">购买失败,进入微信支付...</string>
    <string name="Ensure">"确定"</string>
    <string name="Cancel">"取消"</string>
    <string name="tip_card_recharge_price">%s元</string>
    <string name="hint_recharge_card_number">请输入充值卡号</string>
    <string name="hint_recharge_card_password">请输入充值卡密码</string>
    <string name="alert_card_num_cannot_null">请输入充值卡号码</string>
    <string name="alert_card_pwd_cannot_null">请输入充值卡密码</string>
    <string name="dk_payment_channel_rechargecard">充值卡</string>
    <string name="dk_payment_error_1001">购买失败,请重试</string>
    <string name="dk_incorrect_type_of_card_num_or_pwd">卡号或密码只能为纯数字！</string>
    <string name="dk_text_quit_game_confirm_txt">真的要离开%s吗？</string>
    <string name="dk_btn_pointer_game_recommend_txt">热门游戏推荐</string>
    <string name="dk_btn_quit_game_txt">离开游戏</string>
    <string name="dk_btn_start_download">开始准备下载...</string>
    <string name="dk_download_error">下载失败</string>
    <string name="dk_rank_release_refresh">松开刷新</string>
    <string name="dk_rank_pullup_refresh">上拉刷新</string>
    <string name="dk_rank_pulldown_refresh">下拉刷新</string>
    <string name="dk_rank_refreshing">正在刷新&#8230;</string>
    <string name="dk_btn_string_get_verify_code">获取验证码</string>
    <string name="dk_userinfo_error">获取用户数据出错</string>
    <string name="dk_txt_game_name">游戏名称：</string>
    <string name="dk_txt_game_size">游戏大小：</string>
    <string name="dk_txt_start_download">立即下载</string>
    <string name="dk_txt_download_running">正在下载中，请稍候...</string>
    <string name="dk_txt_game_installed">您已经安装此游戏！</string>
    <string name="dk_txt_apk_error">您下载游戏安装包出错，请重新下载</string>
    <string name="dk_game_data_get_fail">数据获取失败，请稍后再试</string>
    <string name="dk_btn_next_step">下一步</string>
    <string name="dk_tv_string_loading">加载中...</string>
    <string name="dk_pay_centre">百度游戏支付中心</string>
    <string name="dk_pay_by_game_card">游戏卡支付</string>
    <string name="dk_pay_mode_select">请选择支付方式</string>
    <string name="dk_recharge_card">充值卡</string>
    <string name="dk_pay_card">支付宝</string>
    <string name="dk_bank_card">银行卡</string>
    <string name="dk_game_card">游戏卡</string>
    <string name="dk_quickpay">一键支付</string>
    <string name="dk_payment_notice">公告</string>
    <string name="dk_btn_string_pay">支付</string>
    <string name="dk_btn_gold_coin">金币</string>
    <string name="dk_btn_string_return">返回</string>
    <string name="dk_btn_string_exchange">兑换</string>
    <string name="dk_btn_string_repay">重新支付</string>
    <string name="dk_btn_string_back">返回游戏</string>
    <string name="dk_btn_string_check_network">检查网络</string>
    <string name="dk_current_consume">本次消费金额：</string>
    <string name="dk_tip_current_amount">本次支付金额：</string>
    <string name="dk_tip_quickpay_amount">待支付金额：</string>
    <string name="dk_tip_current_charge_title">本次充值金额：</string>
    <string name="dk_tip_other_bank_title">使用其他银行卡支付</string>
    <string name="dk_last_pay_mode">推荐支付方式</string>
    <string name="dk_other_pay_mode">其他支付方式</string>
    <string name="dk_last_recharge_mode">上次充值方式</string>
    <string name="dk_other_recharge_mode">其他充值方式</string>
    <string name="dk_select_kubi_pay_title">使用余额支付：%s</string>
    <string name="dk_select_kubi_pay_not_engouth">使用余额支付%s酷币,还需支付</string>
    <string name="dk_customer_service_title">客服:</string>
    <string name="dk_customer_service_number">客服:10101866</string>
    <string name="dk_select_card_amount">请选择移动卡面额：</string>
    <string name="dk_tip_card_info_title">温馨提示:</string>
    <string name="dk_tip_exchange_amount">请填写兑换数量</string>
    <string name="dk_tip_exchange_gold_amount">请输入兑换%s的数量！</string>
    <string name="dk_tip_exchange_gold_number">请输入正确的%s数量！</string>
    <string name="dk_tip_exchange_gold_success">%s成功，到账</string>
    <string name="dk_tip_exchange_amount_most">最多能兑换%s</string>
    <string name="dk_tip_exchange_rate">(1酷币=%s</string>
    <string name="dk_tip_exchange_fail">兑换失败</string>
    <string name="dk_tip_exchange_no_enough">酷币余额不足，无法兑换！</string>
    <string name="dk_tip_game_card_please_select">请选择%s面额:</string>
    <string name="dk_tip_payment_fail">支付失败</string>
    <string name="dk_tip_payment_success">支付成功</string>
    <string name="dk_tip_input_card_number">请输入卡号</string>
    <string name="dk_tip_input_card_password">请输入密码</string>
    <string name="dk_tip_card_number">%s位</string>
    <string name="dk_tip_card_pass">%s位</string>
    <string name="dk_tip_card_number_hint">请输入卡序列号(%s)</string>
    <string name="dk_tip_card_password_hint">请输入卡密码(%s)</string>
    <string name="dk_tip_mobile_card_number_hint">请输入卡序列号</string>
    <string name="dk_tip_mobile_card_password_hint">请输入卡密码</string>
    <string name="dk_tip_game_card_number_hint">请输入卡号(%s)</string>
    <string name="dk_tip_payment_abort">您确定放弃本次支付？</string>
    <string name="dk_tip_card_number_error">卡号长度错误，请重新输入！</string>
    <string name="dk_tip_card_password_error">密码长度错误，请重新输入！</string>
    <string name="dk_tip_payment_error">请核对卡号、密码是否正确！</string>
    <string name="dk_tip_progress_get_info">正在获取信息</string>
    <string name="dk_tip_progress_pay_info">正在进行，请稍后…</string>
    <string name="dk_tip_pay_dialog_all_amount">总共扣除：%s元</string>
    <string name="dk_tip_pay_dialog_good_price">购买商品价格：%s元</string>
    <string name="dk_tip_pay_dialog_kubi_save">存入酷币账户：%s元</string>
    <string name="dk_tip_pay_dialog_kubi_ratio">(由于存在通道费率,游戏卡1元=0.8酷币)</string>
    <string name="dk_tip_typewrong_timeleft">输入错误,还有%d次机会，否则就锁定验证码获取操作！</string>
    <string name="dk_tip_is_not_pay">是否进行支付？</string>
    <string name="dk_tip_recharge_amount_error">您的充值金额超出限制！</string>
    <string name="dk_tip_payment_other_error">数据提交失败，请返回游戏重试！</string>
    <string name="dk_tip_payment_draw_server_error">服务异常，请稍后重试！</string>
    <string name="dk_tip_payment_network_error">网络异常，请检查网络状态后重试！</string>
    <string name="dk_tip_payment_network_time_out">网络请求超时，请检查网络后%s重试！</string>
    <string name="dk_tip_payment_webview_generic_error">出现异常情况，请稍后重试！</string>
    <string name="dk_tip_kubi_pay_info">扣除支付金额后所剩余金额将自动存入多酷账户！</string>
    <string name="dk_tip_kubi_not_enougth">所选金额不足以支付金额将自动存入账户余额！</string>
    <string name="dk_tip_card_info_content">请选择与卡面金额相符的金额充值！仅支持通用的%s</string>
    <string name="dk_tip_kubi_not_enougth_dia">所扣除金额不足以支付商品，%s元将自动存入酷币账户。</string>
    <string name="dk_tip_card_info_extend_mobile">充值卡、广州、江苏、浙江、辽宁、福建的地方卡。</string>
    <string name="dk_tip_card_info_extend_unicom">充值卡，暂不支持地方卡。</string>
    <string name="dk_tip_card_info_extend_specity">，矩阵卡暂不支持！ </string>
    <string name="dk_tip_pay_desc">(单笔金额超过%s元 , 请使用其他支付方式。)</string>
    <string name="dk_tip_pay_desc_simple">单笔金额超过%s元 , 请使用其他支付方式！</string>
    <string name="dk_alipay_recharge_failure">充值未成功,请返回游戏重试！</string>
    <string name="dk_tip_choose_recharge_amount">请选择充值金额：</string>
    <string name="dk_tip_choose_recharge_ratio">(1元=1酷币)</string>
    <string name="dk_tip_alipay_exchange_ratio">(1元=*金币)</string>
    <string name="dk_hint_for_alipay">其他金额(元)</string>
    <string name="dk_tip_alipay_tip_jinbiamount">可兑换</string>
    <string name="dk_tip_alipay_tip_jinbiamount1">**</string>
    <string name="dk_tip_alipay_tip_jinbiamount2">游戏币</string>
    <string name="dk_alipay_choose_amount_10">10元</string>
    <string name="dk_alipay_choose_amount_30">30元</string>
    <string name="dk_alipay_choose_amount_50">50元</string>
    <string name="dk_alipay_choose_amount_100">100元</string>
    <string name="dk_pay_session_invalid">您的登录状态已失效！</string>
    <string name="dk_tip_history_status">状态：%s</string>
    <string name="dk_tip_history_none">未到账</string>
    <string name="dk_tip_history_success">充值成功</string>
    <string name="dk_tip_history_none_extend">(可能要过几分钟才能到账哦)</string>
    <string name="dk_tip_history_pay_method">使用%s充值</string>
    <string name="dk_tip_history_order_id">订单号：%s</string>
    <string name="dk_tip_lock_pay_info">您已提交过充值请求,请返回游戏查看到账信息!</string>
    <string name="dk_alipay_recharge_success">系统正在处理您的充值请求，充值到账可能有延迟，建议您1-3分钟查看到账信息！</string>
    <string name="dk_tip_recharge_already_submit">系统正在处理您的充值请求，充值到账可能有延迟，建议您1-3分钟查看到账信息！</string>
    <string name="dk_tip_history_recharge_amount">充值金额：</string>
    <string name="dk_tip_history_recharge_method">充值方式：</string>
    <string name="dk_tip_history_order_id_extend">订单号：</string>
    <string name="dk_tip_history_order_status">充值状态：</string>
    <string name="dk_tip_history_retry_load">触 屏 即 可 重 试</string>
    <string name="dk_tip_history_failed">充值失败</string>
    <string name="dk_tip_history_ongoing">充值已提交</string>
    <string name="dk_tip_history_use">使用</string>
    <string name="dk_tip_hisotry_recharge">充值</string>
    <string name="dk_tip_history_ongoing_info">(可能要过几分钟才能到账哦)</string>
    <string name="dk_dialog_string_close">关闭</string>
    <string name="dk_dialog_string_get">获取</string>
    <string name="dk_dialog_string_reget">重新获取</string>
    <string name="dk_dialog_string_rewrite">重新填写</string>
    <string name="dk_dialog_string_geting">正在获取</string>
    <string name="dk_dialog_string_get_fail">获取失败</string>
    <string name="dk_dialog_string_unbind">解除绑定</string>
    <string name="dk_dialog_string_fail_title">解绑失败</string>
    <string name="dk_dialog_string_next_title">请求失败</string>
    <string name="pay_purchase_item">所购道具</string>
    <string name="pay_payamount">支付金额:</string>
    <string name="dialog_purchaseinfo">尊敬的用户,您购买信息如下</string>
    <string name="dialog_gamemname">游戏名称:</string>
    <string name="dialog_paymethods">支付方式:</string>
    <string name="dialog_paymoney">(点击确认将从您的手机话费中扣除%s元)</string>
    <string name="dialog_bankname">银行名称</string>
    <string name="dialog_credit">信用卡</string>
    <string name="dialog_debit">借记卡</string>
    <string name="dialog_cardone">卡1</string>
    <string name="dialog_cardtwo">卡2</string>
    <string name="dialog_cardthree">卡3</string>
    <string name="dialog_cardfour">卡4</string>
    <string name="dialog_cardfive">卡5</string>
    <string name="dialog_cardsix">卡6</string>
    <string name="dialog_cardseven">卡7</string>
    <string name="dialog_cardeight">卡8</string>
    <string name="dialog_cardnine">卡9</string>
    <string name="dialog_cardten">卡10</string>
    <string name="dialog_cardeleven">卡11</string>
    <string name="dk_draw_norecord">木有中过奖,加油哦!</string>
    <string name="dk_draw_left_time_three">剩余抽奖次数:3</string>
    <string name="dk_draw_next_time">下次抽奖时间:9月10日 17:50</string>
</resources>