<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#d0d0d0"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tv1"
        android:layout_width="0dp"
        android:layout_height="23dp"
        android:layout_weight="103"
        android:gravity="center"
        android:text="@string/dialog_bankname"
        android:textColor="@color/dk_color_666666"
        android:textSize="12sp" />

    <View
        android:id="@+id/view1"
        android:layout_width="1dp"
        android:layout_height="fill_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/dk_color_666666" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="42"
        android:gravity="center"
        android:text="@string/dialog_credit"
        android:textColor="@color/dk_color_666666"
        android:textSize="12sp" />

    <View
        android:id="@+id/View01"
        android:layout_width="1dp"
        android:layout_height="fill_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/dk_color_666666" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="42"
        android:gravity="center"
        android:text="@string/dialog_debit"
        android:textColor="@color/dk_color_666666"
        android:textSize="12sp" />

</LinearLayout>
