<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/dk_draw_title_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/dk_draw_icon_happy" />

    <TextView
        android:id="@+id/dk_draw_title_main_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/dk_draw_norecord"
        android:textColor="#333333"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/dk_draw_group_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dk_draw_alert_line1_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dk_draw_left_time_three"
            android:textColor="#d42e22"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/dk_draw_alert_line2_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/dk_draw_next_time"
            android:textColor="#d42e22"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>
